--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Simple application that intergrates with Google calendar"
     />
     <title>Matt's Calendar</title>
+    <script src="https://apis.google.com/js/api.js" >
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
